# daemos

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md  bun.lockb  daemos.desktop  index.html  nuxt.config.ts  package.json  tsconfig.json
.github/workflows/: ci.yml  flakehub.yml  publish.yml
app/: app.config.ts
app/components/: files.vue  player.vue
app/pages/: index.vue
assets/: README.md
daemos/: Cargo.toml
daemos-core/: Cargo.toml
daemos-core/src/: lib.rs
daemos-core/src/database/: connection.rs  local.rs  tables.rs
daemos-core/src/database/models/: tracks.rs
daemos-core/src/database/models/playlists/: playlist_tracks.rs
daemos-core/src/database/models/utils/: parse.rs
daemos-core/src/utils/: files.rs  logging.rs  mod.rs  regex.rs
daemos-headless/: Cargo.toml
daemos-headless/src/: decoder.rs  http_source.rs  main.rs  pcm.rs
daemos-server/: Cargo.toml
daemos-server/src/: config.rs  main.rs
daemos-server/src/routers/: health.rs  mod.rs  not_found.rs  tracks.rs
daemos/src/: app.rs  channels.rs  fonts.rs  lib.rs  logging.rs  main.rs  themes.rs
daemos/src/components/: menu_bar.rs  mod.rs
daemos/src/components/modals/: create_playlist.rs
daemos/src/components/popups/: mod.rs  settings.rs
daemos/src/components/popups/debug/: mod.rs  playback.rs
daemos/src/components/tables/: mod.rs  playlists.rs  tags.rs  tracks.rs
daemos/src/components/utils/: positioning.rs
daemos/src/config/: core.rs  mod.rs  persistance.rs  playback.rs  server.rs  ui.rs
daemos/src/context/: performance.rs  playlist.rs  storage.rs  ui.rs
daemos/src/context/playback/: selected.rs
daemos/src/database/: local.rs
daemos/src/database/models/: mod.rs  tracks.rs
daemos/src/database/models/playlists/: mod.rs
daemos/src/files/: open.rs
daemos/src/playback/: mod.rs  notifications.rs  state.rs  track_metadata.rs
daemos/src/utils/: mod.rs  random.rs
src/: App.vue  app.rs  channels.rs  context.rs  lib.rs  logging.rs  main.rs  themes.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: context.rs  lib.rs  main.rs
src-tauri/src/commands/: files.rs  mod.rs
src-tauri/src/commands/playback/: create.rs  mod.rs  pause.rs  play.rs  toggle.rs
src/components/: Files.vue  Greet.vue  menu_bar.rs  mod.rs  playback.rs  settings.rs  table.rs  track_table.rs  tree.rs  volume_bar.rs
src/components/modals/: create_playlist.rs  mod.rs
src/components/popups/: create_playlist.rs  debug.rs  mod.rs  settings.rs
src/components/popups/debug/: performance.rs
src/components/tables/: mod.rs  playlists.rs  tags.rs  tasks.rs  tracks.rs
src/config/: core.rs  general.rs  load.rs  mod.rs  playback.rs  search.rs  ui.rs
src/context/: autoplay.rs  cache.rs  latency.rs  mod.rs  playback.rs  playlist.rs  processing.rs  storage.rs  ui.rs
src/context/playback/: autoplay.rs  control.rs  loaded.rs  mod.rs  selected.rs
src/database/: connection.rs  hash.rs  mod.rs  tables.rs
src/database/models/: mod.rs  playlist_tracks.rs  playlists.rs  tracks.rs
src/database/models/playlists/: playlist.rs  playlist_tracks.rs
src/database/models/tags/: mod.rs
src/files/: open.rs
src/playback/: mod.rs  notifications.rs  state.rs  track_metadata.rs
src/utils/: formatting.rs  macros.rs  mod.rs  random.rs  search.rs
static/assets/: README.md
