[package]
name = "daemos"
version = "0.1.1"
edition = "2024"
authors = ["Xithrius <xithrius@gmail.com>"]
rust-version = "1.88.0"
description = "A local-only music player"
documentation = "https://github.com/Xithrius/daemos"
homepage = "https://github.com/Xithrius/daemos"
repository = "https://github.com/Xithrius/daemos"
license = "MIT OR Apache-2.0"
keywords = ["music", "gui"]
categories = ["command-line-utilities"]

[dependencies]
egui = { version = "0.32", features = ["serde"] }
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the wgpu rendering backend. Alternative: "glow".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
egui_extras = { version = "0.32.3", features = ["image"] }
catppuccin-egui = { version = "5.7.0", default-features = false, features = [
    "egui32",
] }
egui_dock = "0.17.0"
egui_plot = "0.33.0"
wgpu = "25" # enables the wgpu default features so we get the default backends
color-eyre = "0.6.5"
rfd = "0.15.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
rusqlite = { version = "0.35.0", features = ["bundled", "chrono"] }
config = { version = "0.15.22", default-features = false, features = ["toml"] }
uuid = { version = "1.22.0", features = ["v4", "fast-rng", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
blake3 = { version = "1.8.3", features = ["serde"] }
crossbeam = "0.8.4"
rodio = { version = "0.20.1", features = ["symphonia-all"] }
symphonia = { version = "0.5.5", features = ["mp3", "flac", "wav"] }
sysinfo = { version = "0.35.2", features = ["serde"] }
notify-rust = "4.12.0"
image = { version = "0.25.10", features = ["png"] }
rand = "0.9.2"
thiserror = "2.0.18"
regex = "1.12.3"
fuzzy-matcher = "0.3.7"
toml = "0.8.23"

[profile.dev]
lto = "off"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
# panic = "abort" # We will NOT use abort. Abort is gross.
