[package]
name = "daemos"
version = "0.1.0"
edition = "2024"
authors = ["Xithrius <xithrius@gmail.com>"]
rust-version = "1.89.0"
description = "A portable music player"
documentation = "https://github.com/Xithrius/daemos"
homepage = "https://github.com/Xithrius/daemos"
repository = "https://github.com/Xithrius/daemos"
license = "MIT OR Apache-2.0"
keywords = ["music", "gui"]
categories = ["command-line-utilities"]

[dependencies]
daemos-core = { workspace = true }

egui = { workspace = true }
eframe = { workspace = true }
egui_extras = { workspace = true }
catppuccin-egui = { workspace = true }
egui_dock = { workspace = true }
egui_plot = { workspace = true }
wgpu = { workspace = true }
color-eyre = { workspace = true }
rfd = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
serde = { workspace = true }
rusqlite = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
crossbeam = { workspace = true }
rodio = { workspace = true }
sysinfo = { workspace = true }
notify-rust = { workspace = true }
image = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
fuzzy-matcher = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
parking_lot = { workspace = true }

[[bin]]
name = "daemos"
path = "src/main.rs"
